Polishing.
Revise aggregatePathCache generics. Reformat code.

See #1657
Original pull request: #1661